--- a/etablissementAngular/src/app/app.component.html
+++ b/etablissementAngular/src/app/app.component.html
@@ -1,2 +1,4 @@
-Bienvenue
+<div>
+    <button *ngIf="user"  class="alert alert-danger" (click)="logout()">Deconnexion</button>
+</div>
 <router-outlet></router-outlet>
