Update admin Angular

--- a/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
+++ b/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
@@ -6,8 +6,9 @@
     <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-outline-light">Liste des salles  </a>
 </div>
 
+
+
 <h1>liste des Professeurs</h1>
-<button class="btn btn-link" (click)="displayNew()">ajouter Salle de Classe</button>
 
 <table class="table">
 
@@ -17,7 +18,9 @@
     <th>Login</th>
     <th>nom</th>    
     <th>prenom</th>
-    <th>Adresse</th>
+    <th>Adresse => numero de rue</th>
+    <th>Adresse => nom de rue</th>
+    <th>Adresse => ville</th>
     <th>dateNaissance</th>
     <th>etablissement</th>
     <th></th>
