--- a/etablissementAngular/src/app/admin-row/professeur-row/professeur-row.component.html
+++ b/etablissementAngular/src/app/admin-row/professeur-row/professeur-row.component.html
@@ -5,7 +5,9 @@
     <td>{{ user.login }}</td>
     <td>{{ user.nom }}</td>
     <td>{{ user.prenom }}</td>
-    <td>{{ user.adresse }}</td>
+    <td>{{ user.adresse.numRue }}</td>
+    <td>{{ user.adresse.nomRue }}</td>
+    <td>{{ user.adresse.ville }}</td>
     <td>{{user.dateNaissance}}</td>
     <td>{{user.etablissement}}</td>
     <td>
@@ -23,7 +25,9 @@
     <td><input [(ngModel)]="user.login"></td>
     <td><input [(ngModel)]="user.nom"></td>
     <td><input [(ngModel)]="user.prenom"></td>
-    <td><input [(ngModel)]="user.adresse"></td>
+    <td><input [(ngModel)]="user.adresse.numRue"></td>
+    <td><input [(ngModel)]="user.adresse.nomRue"></td>
+    <td><input [(ngModel)]="user.adresse.ville"></td>
     <td><input [(ngModel)]="user.dateNaissance"></td>
     <td><input [(ngModel)]="user.etablissement"></td>
     <td>
