--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -1,6 +1,6 @@
-<p>planning works!</p>
+<p>Planning de la semaine!</p>
 
-<!--affichage liste matieres-->
+<!--affichage liste matieres
     <table>
         <tr *ngFor="let c of cours">
             <td>{{c.heureDebut}}</td>
@@ -10,7 +10,7 @@
             <td>{{ c.salle.nom}}</td>
         </tr>
     </table>
-
+-->
     <div class="container">
       <div class="timetable-img text-center">
           <img src="img/content/timetable.png" alt="">
@@ -20,183 +20,65 @@
               <thead>
                   <tr class="bg-light-gray">
                       <!-- texte adapté -->
-                      <th class="text-uppercase">Heure
+                      <th class="text-uppercase">
                       </th>
                       <th class="text-uppercase">Lundi</th>
                       <th class="text-uppercase">Mardi</th>
                       <th class="text-uppercase">Mercredi</th>
                       <th class="text-uppercase">Jeudi</th>
                       <th class="text-uppercase">Vendredi</th>
-                      <th class="text-uppercase">Samedi</th>
                   </tr>
               </thead>
               <tbody>
                   <tr>
                       <!--format de l'heure adapté-->
-                      <td class="align-middle">09:00</td>
-                      <td>
-                          <!--MODIFS A APPLIQUER PARTOUT-->
-                          <!--définir une directive couleur qui définit la bonne couleur en fonction de la matiere-->
-                          <!--faire afficher la bonne matière {{matiere.nom}} pour le professeur connecte pour le bon jour et la bonne tranche horaire-->
-
-
-                          <!--le tout affiché par tranche horaire-->
-                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13">Dance</span>
-
-                          <!--laisser comme ça ou gérer par tranche horaire-->
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <!--on fait remonter le nom du professeur qui affiche ce component-->
-                          <div class="font-size13 text-light-gray">nom</div><!--{{nom}}-->
-                          <!--afficher en plus la classe et la salle ?-->
-                      </td>
-                      <td>
-                          <span class="bg-green padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Yoga</span>
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <div class="font-size13 text-light-gray">Marta Healy</div>
-                      </td>
-
-                      <td>
-                          <!---->
-                          <span class="bg-yellow padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Music</span>
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td>
-                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Dance</span>
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td>
-                          <span class="bg-purple padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Art</span>
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <div class="font-size13 text-light-gray">Kate Alley</div>
-                      </td>
-                      <td>
-                          <span class="bg-pink padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">English</span>
-                          <div class="margin-10px-top font-size14">9:00-10:00</div>
-                          <div class="font-size13 text-light-gray">James Smith</div>
-                      </td>
+                      <td class="align-middle">
+                        <tr style="font-weight: bold;">08:00 </tr>
+                        <tr style="font-size: small;">08:30</tr>
+                        </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">10:00</td>
-                      <td>
-                          <span class="bg-yellow padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Music</span>
-                          <div class="margin-10px-top font-size14">10:00-11:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td class="bg-light-gray">
-
-                      </td>
-                      <td>
-                          <span class="bg-purple padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Art</span>
-                          <div class="margin-10px-top font-size14">10:00-11:00</div>
-                          <div class="font-size13 text-light-gray">Kate Alley</div>
-                      </td>
-                      <td>
-                          <span class="bg-green padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Yoga</span>
-                          <div class="margin-10px-top font-size14">10:00-11:00</div>
-                          <div class="font-size13 text-light-gray">Marta Healy</div>
-                      </td>
-                      <td>
-                          <span class="bg-pink padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">English</span>
-                          <div class="margin-10px-top font-size14">10:00-11:00</div>
-                          <div class="font-size13 text-light-gray">James Smith</div>
-                      </td>
-                      <td class="bg-light-gray">
-
-                      </td>
+                      <td class="align-middle">09:00 - 09:30</td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">11:00</td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
-                      <td>
-                          <span class="bg-lightred padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Break</span>
-                          <div class="margin-10px-top font-size14">11:00-12:00</div>
-                      </td>
+                      <td class="align-middle">10:00 - 10:30</td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">12:00</td>
-                      <td class="bg-light-gray">
+                      <td class="align-middle">11:00 - 11:30</td>
 
-                      </td>
-                      <td>
-                          <span class="bg-purple padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Art</span>
-                          <div class="margin-10px-top font-size14">12:00-1:00</div>
-                          <div class="font-size13 text-light-gray">Kate Alley</div>
-                      </td>
-                      <td>
-                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Dance</span>
-                          <div class="margin-10px-top font-size14">12:00-1:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td>
-                          <span class="bg-yellow padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Music</span>
-                          <div class="margin-10px-top font-size14">12:00-1:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td class="bg-light-gray">
-
-                      </td>
-                      <td>
-                          <span class="bg-green padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Yoga</span>
-                          <div class="margin-10px-top font-size14">12:00-1:00</div>
-                          <div class="font-size13 text-light-gray">Marta Healy</div>
-                      </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">13:00</td>
-                      <td>
-                          <span class="bg-pink padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">English</span>
-                          <div class="margin-10px-top font-size14">1:00-2:00</div>
-                          <div class="font-size13 text-light-gray">James Smith</div>
-                      </td>
-                      <td>
-                          <span class="bg-yellow padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Music</span>
-                          <div class="margin-10px-top font-size14">1:00-2:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
-                      <td class="bg-light-gray">
-
-                      </td>
-                      <td>
-                          <span class="bg-pink padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">English</span>
-                          <div class="margin-10px-top font-size14">1:00-2:00</div>
-                          <div class="font-size13 text-light-gray">James Smith</div>
-                      </td>
-                      <td>
-                          <span class="bg-green padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Yoga</span>
-                          <div class="margin-10px-top font-size14">1:00-2:00</div>
-                          <div class="font-size13 text-light-gray">Marta Healy</div>
-                      </td>
-                      <td>
-                          <span class="bg-yellow padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16  xs-font-size13">Music</span>
-                          <div class="margin-10px-top font-size14">1:00-2:00</div>
-                          <div class="font-size13 text-light-gray">Ivana Wong</div>
-                      </td>
+                      <td class="align-middle">12:00 - 12:30</td>
                   </tr>
+
+                  <tr>
+                    <!--format de l'heure adapté-->
+                    <td class="align-middle">13:00 - 13:30</td>
+                </tr>
+
+                <tr>
+                    <td class="align-middle">14:00 - 14:30</td>
+                </tr>
+
+                <tr>
+                    <td class="align-middle">15:00 - 15:30</td>
+                </tr>
+
+                <tr>
+                    <td class="align-middle">16:00 - 16:30</td>
+
+                </tr>
+
+                <tr>
+                    <td class="align-middle">17:00 - 17:30</td>
+                </tr>
+                <tr>
+                  <td class="align-middle">18:00 - 18:30</td>
+              </tr>
               </tbody>
           </table>
       </div>
