--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -39,45 +39,76 @@
                   </tr>
 
                   <tr>
-                      <td class="align-middle">09:00 - 09:30</td>
+                      <td class="align-middle">
+                        <tr style="font-weight: bold;">09:00 </tr>
+                        <tr style="font-size: small;">09:30</tr>
+                        </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">10:00 - 10:30</td>
+                      <td class="align-middle">
+                        <tr style="font-weight: bold;">10:00 </tr>
+                        <tr style="font-size: small;">10:30</tr>
+                    </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">11:00 - 11:30</td>
+                      <td class="align-middle">
+                        <tr style="font-weight: bold;">11:00 </tr>
+                        <tr style="font-size: small;">11:30</tr>
+                    </td>
 
                   </tr>
 
                   <tr>
-                      <td class="align-middle">12:00 - 12:30</td>
+                      <td class="align-middle">
+                          
+                        <tr style="font-weight: bold;">12:00 </tr>
+                        <tr style="font-size: small;">12:30</tr>
+                        </td>
                   </tr>
 
                   <tr>
                     <!--format de l'heure adapté-->
-                    <td class="align-middle">13:00 - 13:30</td>
+                    <td class="align-middle">
+                        <tr style="font-weight: bold;">13:00 </tr>
+                        <tr style="font-size: small;">13:30</tr>
+                    </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">14:00 - 14:30</td>
+                    <td class="align-middle">
+                        <tr style="font-weight: bold;">14:00 </tr>
+                        <tr style="font-size: small;">14:30</tr>
+                    </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">15:00 - 15:30</td>
+                    <td class="align-middle">
+                        <tr style="font-weight: bold;">15:00 </tr>
+                        <tr style="font-size: small;">15:30</tr>
+                    </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">16:00 - 16:30</td>
+                    <td class="align-middle">
+                        <tr style="font-weight: bold;">16:00 </tr>
+                        <tr style="font-size: small;">16:30</tr>
+                    </td>
 
                 </tr>
 
                 <tr>
-                    <td class="align-middle">17:00 - 17:30</td>
+                    <td class="align-middle">
+                        <tr style="font-weight: bold;">17:00 </tr>
+                        <tr style="font-size: small;">17:30</tr>
+                    </td>
                 </tr>
                 <tr>
-                  <td class="align-middle">18:00 - 18:30</td>
+                  <td class="align-middle">
+                    <tr style="font-weight: bold;">18:00 </tr>
+                    <tr style="font-size: small;">18:30</tr>
+                </td>
               </tr>
               </tbody>
           </table>
