--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -15,12 +15,12 @@
       <div class="timetable-img text-center">
           <img src="img/content/timetable.png" alt="">
       </div>
-      <div class="table-responsive">
-          <table class="table table-bordered text-center">
+      <div class="table-responsive ">
+          <table class="table table-bordered text-center ">
               <thead>
-                  <tr class="bg-light-gray">
+                  <tr class="bg-violet">
                       <!-- texte adapté -->
-                      <th class="text-uppercase">
+                      <th class="text-uppercase" style="background-color:white">
                       </th>
                       <th class="text-uppercase">Lundi</th>
                       <th class="text-uppercase">Mardi</th>
@@ -30,30 +30,30 @@
                   </tr>
               </thead>
               <tbody>
-                  <tr>
-                      <!--format de l'heure adapté-->
-                      <td class="align-middle">
-                        <tr style="font-weight: bold;">08:00 </tr>
-                        <tr style="font-size: small;">08:30</tr>
-                        </td>
-                  </tr>
 
                   <tr>
-                      <td class="align-middle">
+                      <!--format de l'heure adapté-->
+                        <td class="align-middle bg-violet">
+                          <tr style="font-weight: bold;">08:00 </tr>
+                          <tr style="font-size: small;">08:30</tr>
+                          </td>
+                  </tr>
+                  <tr>
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">09:00 </tr>
                         <tr style="font-size: small;">09:30</tr>
                         </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">10:00 </tr>
                         <tr style="font-size: small;">10:30</tr>
                     </td>
                   </tr>
 
                   <tr>
-                      <td class="align-middle">
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">11:00 </tr>
                         <tr style="font-size: small;">11:30</tr>
                     </td>
@@ -61,8 +61,8 @@
                   </tr>
 
                   <tr>
-                      <td class="align-middle">
-                          
+                    <td class="align-middle bg-violet">
+
                         <tr style="font-weight: bold;">12:00 </tr>
                         <tr style="font-size: small;">12:30</tr>
                         </td>
@@ -70,28 +70,28 @@
 
                   <tr>
                     <!--format de l'heure adapté-->
-                    <td class="align-middle">
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">13:00 </tr>
                         <tr style="font-size: small;">13:30</tr>
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">
+                  <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">14:00 </tr>
                         <tr style="font-size: small;">14:30</tr>
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">
+                  <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">15:00 </tr>
                         <tr style="font-size: small;">15:30</tr>
                     </td>
                 </tr>
 
                 <tr>
-                    <td class="align-middle">
+                  <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">16:00 </tr>
                         <tr style="font-size: small;">16:30</tr>
                     </td>
@@ -99,13 +99,13 @@
                 </tr>
 
                 <tr>
-                    <td class="align-middle">
+                  <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">17:00 </tr>
                         <tr style="font-size: small;">17:30</tr>
                     </td>
                 </tr>
                 <tr>
-                  <td class="align-middle">
+                  <td class="align-middle bg-violet">
                     <tr style="font-weight: bold;">18:00 </tr>
                     <tr style="font-size: small;">18:30</tr>
                 </td>
