commit changes calendar

--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -36,7 +36,12 @@
                         <td class="align-middle bg-violet">
                           <tr style="font-weight: bold;">08:00 </tr>
                           <tr style="font-size: small;">08:30</tr>
-                          </td>
+                        </td>
+                        <td>{{matrix[0][0].matiere}}</td>
+                        <td>{{matrix[0][1].matiere}}</td>
+                        <td>{{matrix[0][2].matiere}}</td>
+                        <td>{{matrix[0][3].matiere}}</td>
+                        <td>{{matrix[0][4].matiere}}</td>
                   </tr>
                   <tr>
                     <td class="align-middle bg-violet">
