commit MAJ calendar

--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -37,17 +37,22 @@
                           <tr style="font-weight: bold;">08:00 </tr>
                           <tr style="font-size: small;">08:30</tr>
                         </td>
-                        <td>{{matrix[0][0].matiere}}</td>
-                        <td>{{matrix[0][1].matiere}}</td>
-                        <td>{{matrix[0][2].matiere}}</td>
-                        <td>{{matrix[0][3].matiere}}</td>
-                        <td>{{matrix[0][4].matiere}}</td>
+                        <td>{{matrix[0][0].matiere.nom}}</td>
+                        <td>{{matrix[0][1].matiere.nom}}</td>
+                        <td>{{matrix[0][2].matiere.nom}}</td>
+                        <td>{{matrix[0][3].matiere.nom}}</td>
+                        <td>{{matrix[0][4].matiere.nom}}</td>
                   </tr>
                   <tr>
                     <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">09:00 </tr>
                         <tr style="font-size: small;">09:30</tr>
                         </td>
+                        <td>{{matrix[1][0].matiere.nom}}</td>
+                        <td>{{matrix[1][1].matiere.nom}}</td>
+                        <td>{{matrix[1][2].matiere.nom}}</td>
+                        <td>{{matrix[1][3].matiere.nom}}</td>
+                        <td>{{matrix[1][4].matiere.nom}}</td>
                   </tr>
 
                   <tr>
@@ -55,6 +60,11 @@
                         <tr style="font-weight: bold;">10:00 </tr>
                         <tr style="font-size: small;">10:30</tr>
                     </td>
+                    <td>{{matrix[2][0].matiere.nom}}</td>
+                        <td>{{matrix[2][1].matiere.nom}}</td>
+                        <td>{{matrix[2][2].matiere.nom}}</td>
+                        <td>{{matrix[2][3].matiere.nom}}</td>
+                        <td>{{matrix[2][4].matiere.nom}}</td>
                   </tr>
 
                   <tr>
@@ -62,7 +72,11 @@
                         <tr style="font-weight: bold;">11:00 </tr>
                         <tr style="font-size: small;">11:30</tr>
                     </td>
-
+                    <td>{{matrix[3][0].matiere.nom}}</td>
+                        <td>{{matrix[3][1].matiere.nom}}</td>
+                        <td>{{matrix[3][2].matiere.nom}}</td>
+                        <td>{{matrix[3][3].matiere.nom}}</td>
+                        <td>{{matrix[3][4].matiere.nom}}</td>
                   </tr>
 
                   <tr>
@@ -71,6 +85,11 @@
                         <tr style="font-weight: bold;">12:00 </tr>
                         <tr style="font-size: small;">12:30</tr>
                         </td>
+                        <td>{{matrix[4][0].matiere.nom}}</td>
+                        <td>{{matrix[4][1].matiere.nom}}</td>
+                        <td>{{matrix[4][2].matiere.nom}}</td>
+                        <td>{{matrix[4][3].matiere.nom}}</td>
+                        <td>{{matrix[4][4].matiere.nom}}</td>
                   </tr>
 
                   <tr>
@@ -79,6 +98,11 @@
                         <tr style="font-weight: bold;">13:00 </tr>
                         <tr style="font-size: small;">13:30</tr>
                     </td>
+                    <td>{{matrix[5][0].matiere.nom}}</td>
+                        <td>{{matrix[5][1].matiere.nom}}</td>
+                        <td>{{matrix[5][2].matiere.nom}}</td>
+                        <td>{{matrix[5][3].matiere.nom}}</td>
+                        <td>{{matrix[5][4].matiere.nom}}</td>
                 </tr>
 
                 <tr>
@@ -86,6 +110,11 @@
                         <tr style="font-weight: bold;">14:00 </tr>
                         <tr style="font-size: small;">14:30</tr>
                     </td>
+                    <td>{{matrix[6][0].matiere.nom}}</td>
+                        <td>{{matrix[6][1].matiere.nom}}</td>
+                        <td>{{matrix[6][2].matiere.nom}}</td>
+                        <td>{{matrix[6][3].matiere.nom}}</td>
+                        <td>{{matrix[6][4].matiere.nom}}</td>
                 </tr>
 
                 <tr>
@@ -93,6 +122,11 @@
                         <tr style="font-weight: bold;">15:00 </tr>
                         <tr style="font-size: small;">15:30</tr>
                     </td>
+                    <td>{{matrix[7][0].matiere.nom}}</td>
+                        <td>{{matrix[7][1].matiere.nom}}</td>
+                        <td>{{matrix[7][2].matiere.nom}}</td>
+                        <td>{{matrix[7][3].matiere.nom}}</td>
+                        <td>{{matrix[7][4].matiere.nom}}</td>
                 </tr>
 
                 <tr>
@@ -100,7 +134,11 @@
                         <tr style="font-weight: bold;">16:00 </tr>
                         <tr style="font-size: small;">16:30</tr>
                     </td>
-
+                    <td>{{matrix[8][0].matiere.nom}}</td>
+                        <td>{{matrix[8][1].matiere.nom}}</td>
+                        <td>{{matrix[8][2].matiere.nom}}</td>
+                        <td>{{matrix[8][3].matiere.nom}}</td>
+                        <td>{{matrix[8][4].matiere.nom}}</td>
                 </tr>
 
                 <tr>
@@ -108,12 +146,22 @@
                         <tr style="font-weight: bold;">17:00 </tr>
                         <tr style="font-size: small;">17:30</tr>
                     </td>
+                    <td>{{matrix[9][0].matiere.nom}}</td>
+                        <td>{{matrix[9][1].matiere.nom}}</td>
+                        <td>{{matrix[9][2].matiere.nom}}</td>
+                        <td>{{matrix[9][3].matiere.nom}}</td>
+                        <td>{{matrix[9][4].matiere.nom}}</td>
                 </tr>
                 <tr>
                   <td class="align-middle bg-violet">
                     <tr style="font-weight: bold;">18:00 </tr>
                     <tr style="font-size: small;">18:30</tr>
                 </td>
+                <td>{{matrix[10][0].matiere.nom}}</td>
+                        <td>{{matrix[10][1].matiere.nom}}</td>
+                        <td>{{matrix[10][2].matiere.nom}}</td>
+                        <td>{{matrix[10][3].matiere.nom}}</td>
+                        <td>{{matrix[10][4].matiere.nom}}</td>
               </tr>
               </tbody>
           </table>
