--- a/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
+++ b/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
@@ -12,7 +12,7 @@
 
 <table class="table">
 
-<tr *ngIf="showNew" salles-row (insert)="insert()" (cancel)="cancel()"></tr>
+<tr *ngIf="showNew" groupe-classe-row (insert)="insert()" (cancel)="cancel()"></tr>
   <tr>
     <th>id</th>
     <th>nom</th>    
