--- a/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
+++ b/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
@@ -12,7 +12,7 @@
 <button class="btn btn-link" (click)="displayNew()">ajouter Professeur</button>
 <table class="table">
 
-<tr *ngIf="showNew" salles-row (insert)="insert()" (cancel)="cancel()"></tr>
+<tr *ngIf="showNew" professeur-row (insert)="insert()" (cancel)="cancel()"></tr>
   <tr>
     <th>id</th>
     <th>Login.login</th>
