--- a/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
+++ b/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
@@ -11,7 +11,7 @@
 
 <table class="table">
 
-<tr *ngIf="showNew" salles-row (insert)="insert()" (cancel)="cancel()"></tr>
+<tr *ngIf="showNew" salle-classe-row (insert)="insert()" (cancel)="cancel()"></tr>
   <tr>
     <th>id</th>
     <th>nom</th>
