--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -37,8 +37,13 @@
                           <tr style="font-weight: bold;">08:00 </tr>
                           <tr style="font-size: small;">09:00</tr>
                         </td>
-                        <td>{{matrix[0][0].matiere.nom}}</td>
-                        <td>{{matrix[0][1].matiere.nom}}</td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[0][0].matiere.couleur}};">{{matrix[0][0].matiere.nom}}</span>
+                          <div class="font-size13 text-gray">{{matrix[0][0].professeur.nom}} {{matrix[0][0].professeur.prenom}}</div>
+                        </td>
+                        <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[0][1].matiere.couleur}};">{{matrix[0][1].matiere.nom}}</span>
+                          <div class="font-size13 text-gray">{{matrix[0][1].professeur.nom}} {{matrix[0][1].professeur.prenom}}</div>
+                          </td>
                         <td>
                           <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[0][2].matiere.couleur}};">{{matrix[0][2].matiere.nom}}</span>
                           <div class="font-size13 text-gray">{{matrix[0][2].professeur.nom}} {{matrix[0][2].professeur.prenom}}</div>
@@ -47,30 +52,66 @@
                           <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[0][3].matiere.couleur}};">{{matrix[0][3].matiere.nom}}</span>
                           <div class="font-size13 text-gray">{{matrix[0][3].professeur.nom}} {{matrix[0][3].professeur.prenom}}</div>
                           </td>
-                        <td>{{matrix[0][4].matiere.nom}}</td>
-                  </tr>
-                  <tr>
-                    <td class="align-middle bg-violet">
-                        <tr style="font-weight: bold;">09:00 </tr>
-                        <tr style="font-size: small;">10:00</tr>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[0][4].matiere.couleur}};">{{matrix[0][4].matiere.nom}}</span>
+                          <div class="font-size13 text-gray">{{matrix[0][4].professeur.nom}} {{matrix[0][4].professeur.prenom}}</div>
+
                         </td>
-                        <td>{{matrix[1][0].matiere.nom}}</td>
-                        <td>{{matrix[1][1].matiere.nom}}</td>
-                        <td>{{matrix[1][2].matiere.nom}}</td>
-                        <td>{{matrix[1][3].matiere.nom}}</td>
-                        <td>{{matrix[1][4].matiere.nom}}</td>
-                  </tr>
+                      </tr>
+                      <tr>
+                        <td class="align-middle bg-violet">
+                            <tr style="font-weight: bold;">09:00 </tr>
+                            <tr style="font-size: small;">10:00</tr>
+                            </td>
+                            <td>
+                              <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[1][0].matiere.couleur}};">{{matrix[1][0].matiere.nom}}</span>
+                              <div class="font-size13 text-gray">{{matrix[1][0].professeur.nom}} {{matrix[1][0].professeur.prenom}}</div>
+
+                            </td>
+                            <td>
+                              <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[1][1].matiere.couleur}};">{{matrix[1][1].matiere.nom}}</span>
+                              <div class="font-size13 text-gray">{{matrix[1][1].professeur.nom}} {{matrix[1][1].professeur.prenom}}</div>
+                              </td>
+                            <td>
+                              <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[1][2].matiere.couleur}};">{{matrix[1][2].matiere.nom}}</span>
+                              <div class="font-size13 text-gray">{{matrix[1][2].professeur.nom}} {{matrix[1][2].professeur.prenom}}</div>
+
+                            </td>
+                            <td>
+                              <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[1][3].matiere.couleur}};">{{matrix[1][3].matiere.nom}}</span>
+                              <div class="font-size13 text-gray">{{matrix[1][3].professeur.nom}} {{matrix[1][3].professeur.prenom}}</div>
+
+                            </td>
+                            <td>
+                              <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[1][4].matiere.couleur}};">{{matrix[1][4].matiere.nom}}</span>
+                              <div class="font-size13 text-gray">{{matrix[1][4].professeur.nom}} {{matrix[1][4].professeur.prenom}}</div>
+
+                            </td>
+                      </tr>
 
                   <tr>
                     <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">10:00 </tr>
                         <tr style="font-size: small;">11:00</tr>
                     </td>
-                    <td>{{matrix[2][0].matiere.nom}}</td>
-                        <td>{{matrix[2][1].matiere.nom}}</td>
-                        <td>{{matrix[2][2].matiere.nom}}</td>
-                        <td>{{matrix[2][3].matiere.nom}}</td>
-                        <td>{{matrix[2][4].matiere.nom}}</td>
+                    <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[2][0].matiere.couleur}};">{{matrix[2][0].matiere.nom}}</span>
+                      <div class="font-size13 text-gray">{{matrix[2][0].professeur.nom}} {{matrix[2][0].professeur.prenom}}</div>
+                      </td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[2][1].matiere.couleur}};">{{matrix[2][1].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[2][1].professeur.nom}} {{matrix[2][1].professeur.prenom}}</div>
+                        </td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[2][2].matiere.couleur}};">{{matrix[2][2].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[2][2].professeur.nom}} {{matrix[2][2].professeur.prenom}}</div>
+
+                      </td>
+                          <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[2][3].matiere.couleur}};">{{matrix[2][3].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[2][3].professeur.nom}} {{matrix[2][3].professeur.prenom}}</div>
+                        </td>
+                        <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[2][4].matiere.couleur}};">{{matrix[2][4].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[2][4].professeur.nom}} {{matrix[2][4].professeur.prenom}}</div>
+                        </td>
                   </tr>
 
                   <tr>
@@ -78,11 +119,27 @@
                         <tr style="font-weight: bold;">11:00 </tr>
                         <tr style="font-size: small;">12:00</tr>
                     </td>
-                    <td>{{matrix[3][0].matiere.nom}}</td>
-                        <td>{{matrix[3][1].matiere.nom}}</td>
-                        <td>{{matrix[3][2].matiere.nom}}</td>
-                        <td>{{matrix[3][3].matiere.nom}}</td>
-                        <td>{{matrix[3][4].matiere.nom}}</td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[3][0].matiere.couleur}};">{{matrix[3][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[3][0].professeur.nom}} {{matrix[3][0].professeur.prenom}}</div>
+                    </td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[3][1].matiere.couleur}};">{{matrix[3][1].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[3][1].professeur.nom}} {{matrix[3][1].professeur.prenom}}</div>
+                        </td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[3][2].matiere.couleur}};">{{matrix[3][2].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[3][2].professeur.nom}} {{matrix[3][2].professeur.prenom}}</div>
+                        </td>
+                        <td>
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[3][3].matiere.couleur}};">{{matrix[3][3].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[3][3].professeur.nom}} {{matrix[3][3].professeur.prenom}}</div>
+                        </td>
+                        <td>
+
+                          <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[3][4].matiere.couleur}};">{{matrix[4][0].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[3][4].professeur.nom}} {{matrix[3][4].professeur.prenom}}</div>
+                        </td>
                   </tr>
 
                   <tr>
