--- a/etablissementAngular/src/app/planning/planning.component.html
+++ b/etablissementAngular/src/app/planning/planning.component.html
@@ -173,35 +173,76 @@
                         <tr style="font-weight: bold;">14:00 </tr>
                         <tr style="font-size: small;">15:00</tr>
                     </td>
-                    <td>{{matrix[6][0].matiere.nom}}</td>
-                        <td>{{matrix[6][1].matiere.nom}}</td>
-                        <td>{{matrix[6][2].matiere.nom}}</td>
-                        <td>{{matrix[6][3].matiere.nom}}</td>
-                        <td>{{matrix[6][4].matiere.nom}}</td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[6][0].matiere.couleur}};"> {{matrix[6][0].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[6][0].professeur.nom}} {{matrix[6][0].professeur.prenom}}</div>
+                    </td>
+                    <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[6][1].matiere.couleur}};"> {{matrix[6][1].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[6][1].professeur.nom}} {{matrix[6][1].professeur.prenom}}</div>
+                     </td>
+                     <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[6][2].matiere.couleur}};"> {{matrix[6][2].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[6][2].professeur.nom}} {{matrix[6][2].professeur.prenom}}</div>
+                     </td>
+                    <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[6][3].matiere.couleur}};"> {{matrix[6][3].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[6][3].professeur.nom}} {{matrix[6][3].professeur.prenom}}</div>
+                    </td>
+                    <td><span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[6][4].matiere.couleur}};"> {{matrix[6][4].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[6][4].professeur.nom}} {{matrix[6][4].professeur.prenom}}</div>
+                    </td>
                 </tr>
 
                 <tr>
-                  <td class="align-middle bg-violet">
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">15:00 </tr>
                         <tr style="font-size: small;">16:00</tr>
                     </td>
-                    <td>{{matrix[7][0].matiere.nom}}</td>
-                        <td>{{matrix[7][1].matiere.nom}}</td>
-                        <td>{{matrix[7][2].matiere.nom}}</td>
-                        <td>{{matrix[7][3].matiere.nom}}</td>
-                        <td>{{matrix[7][4].matiere.nom}}</td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[7][0].matiere.couleur}};"> {{matrix[7][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[7][0].professeur.nom}} {{matrix[7][0].professeur.prenom}}</div>
+                     </td>
+                    <td>
+                            <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[7][1].matiere.couleur}};">{{matrix[7][1].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[7][1].professeur.nom}} {{matrix[7][1].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[7][2].matiere.couleur}};"> {{matrix[7][2].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[7][2].professeur.nom}} {{matrix[7][2].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[7][3].matiere.couleur}};"> {{matrix[7][3].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[7][3].professeur.nom}} {{matrix[7][3].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[7][4].matiere.couleur}};"> {{matrix[7][4].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[7][4].professeur.nom}} {{matrix[7][4].professeur.prenom}}</div>
+                    </td>
                 </tr>
 
                 <tr>
-                  <td class="align-middle bg-violet">
+                    <td class="align-middle bg-violet">
                         <tr style="font-weight: bold;">16:00 </tr>
                         <tr style="font-size: small;">17:00</tr>
                     </td>
-                    <td>{{matrix[8][0].matiere.nom}}</td>
-                        <td>{{matrix[8][1].matiere.nom}}</td>
-                        <td>{{matrix[8][2].matiere.nom}}</td>
-                        <td>{{matrix[8][3].matiere.nom}}</td>
-                        <td>{{matrix[8][4].matiere.nom}}</td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[8][0].matiere.couleur}};"> {{matrix[8][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[8][0].professeur.nom}} {{matrix[8][0].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[8][1].matiere.couleur}};"> {{matrix[8][1].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[8][1].professeur.nom}} {{matrix[8][1].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[8][2].matiere.couleur}};"> {{matrix[8][2].matiere.nom}}</span>
+                         <div class="font-size13 text-gray">{{matrix[8][2].professeur.nom}} {{matrix[8][2].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[8][3].matiere.couleur}};"> {{matrix[8][3].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[8][3].professeur.nom}} {{matrix[8][3].professeur.prenom}}</div>
+                    </td>
+                    <td>
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[8][4].matiere.couleur}};"> {{matrix[8][4].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[8][4].professeur.nom}} {{matrix[8][4].professeur.prenom}}</div>
+                     </td>
                 </tr>
 
                 <tr>
@@ -209,24 +250,44 @@
                         <tr style="font-weight: bold;">17:00 </tr>
                         <tr style="font-size: small;">18:00</tr>
                     </td>
-                    <td>{{matrix[9][0].matiere.nom}}</td>
-                        <td>{{matrix[9][1].matiere.nom}}</td>
-                        <td>{{matrix[9][2].matiere.nom}}</td>
-                        <td>{{matrix[9][3].matiere.nom}}</td>
-                        <td>{{matrix[9][4].matiere.nom}}</td>
+                    <td> 
+                        <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[9][0].matiere.couleur}};"> {{matrix[9][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[9][0].professeur.nom}} {{matrix[9][0].professeur.prenom}}</div>
+                    </td>
+                        <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[9][0].matiere.couleur}};"> {{matrix[9][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[9][0].professeur.nom}} {{matrix[9][0].professeur.prenom}}</div>
+                    </td>
+                        <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[9][0].matiere.couleur}};"> {{matrix[9][0].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[9][0].professeur.nom}} {{matrix[9][0].professeur.prenom}}</div>
+                    </td>
+                    <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[9][0].matiere.couleur}};"> {{matrix[9][0].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[9][0].professeur.nom}} {{matrix[9][0].professeur.prenom}}</div>
+                    </td>
+                    <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[9][0].matiere.couleur}};"> {{matrix[9][0].matiere.nom}}</span>
+                            <div class="font-size13 text-gray">{{matrix[9][0].professeur.nom}} {{matrix[9][0].professeur.prenom}}</div>
+                     </td>
                 </tr>
                 <tr>
                   <td class="align-middle bg-violet">
                     <tr style="font-weight: bold;">18:00 </tr>
-                    <tr style="font-size: small;">18:30</tr>
                 </td>
-                <td>{{matrix[10][0].matiere.nom}}</td>
-                        <td>{{matrix[10][1].matiere.nom}}</td>
-                        <td>{{matrix[10][2].matiere.nom}}</td>
-                        <td>{{matrix[10][3].matiere.nom}}</td>
-                        <td>{{matrix[10][4].matiere.nom}}</td>
-              </tr>
-              </tbody>
+                <td> 
+                    <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[10][0].matiere.couleur}};"> {{matrix[10][0].matiere.nom}}</span>
+                    <div class="font-size13 text-gray">{{matrix[10][0].professeur.nom}} {{matrix[10][0].professeur.prenom}}</div>
+                </td>
+                    <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[10][0].matiere.couleur}};"> {{matrix[10][0].matiere.nom}}</span>
+                    <div class="font-size13 text-gray">{{matrix[10][0].professeur.nom}} {{matrix[10][0].professeur.prenom}}</div>
+                </td>
+                    <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[10][0].matiere.couleur}};"> {{matrix[10][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[10][0].professeur.nom}} {{matrix[10][0].professeur.prenom}}</div>
+                </td>
+                <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[10][0].matiere.couleur}};"> {{matrix[10][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[10][0].professeur.nom}} {{matrix[10][0].professeur.prenom}}</div>
+                </td>
+                <td> <span class="bg-sky padding-5px-tb padding-15px-lr border-radius-5 margin-10px-bottom text-white font-size16 xs-font-size13" style="background-color: {{matrix[10][0].matiere.couleur}};"> {{matrix[10][0].matiere.nom}}</span>
+                        <div class="font-size13 text-gray">{{matrix[10][0].professeur.nom}} {{matrix[10][0].professeur.prenom}}</div>
+                 </td>
+              </tr>>
           </table>
       </div>
   </div>
