--- a/etablissementAngular/src/app/admin-row/groupe-classe-row/groupe-classe-row.component.html
+++ b/etablissementAngular/src/app/admin-row/groupe-classe-row/groupe-classe-row.component.html
@@ -1,9 +1,9 @@
 
 
-<ng-container *ngIf="!edit; else formEdit">
+<ng-container>
     <td>{{ user.id }}</td>
     <td>{{ user.nom }}</td>
-    <td>{{ user.professeurPrincipal }}</td>
+    <td>{{ user.professeurPrincipal.nom }}</td>
   
     <td>
       <button (click)="changeMode()" class="btn btn-outline-primary">
@@ -14,18 +14,3 @@
       <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
     </td>
   </ng-container>
-  
-  <ng-template #formEdit>
-    <td>{{ user.id }}</td>
-    <td><input [(ngModel)]="user.nom"></td>
-    <td><input [(ngModel)]="user.professeurPrincipal" /></td>
-
-    <td>
-      <button (click)="save()" class="btn btn-outline-success">
-        enregistrer
-      </button>
-    </td>
-    <td>
-      <button (click)="cancel()" class="btn btn-outline-warning">annuler</button>
-    </td>
-  </ng-template>
