--- a/etablissementAngular/src/app/admin/home-admin/home-admin.component.html
+++ b/etablissementAngular/src/app/admin/home-admin/home-admin.component.html
@@ -1,10 +1,12 @@
 
 <div>
-    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-outline-light">Liste des professeurs  </a>
-    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-outline-light">Liste des classes  </a>
-    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-outline-light">Liste des matières  </a>
-    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-outline-light">Liste des salles  </a>
+    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
+    <a  [routerLink]="['/listeutilisateurs']" routerLinkActive="active" class="btn btn-light">Liste des utilisateurs  </a>
+    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
+    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
+    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
 
 </div>
+
 
 
