--- a/etablissementAngular/src/app/admin/list-utilisateurs/list-utilisateurs.component.html
+++ b/etablissementAngular/src/app/admin/list-utilisateurs/list-utilisateurs.component.html
@@ -1,28 +1,32 @@
 
 <div>
     <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
+    <a  [routerLink]="['/listeutilisateurs']" routerLinkActive="active" class="btn btn-light">Liste des utilisateurs  </a>
     <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
     <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
     <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
-
 </div>
 
-<h1>Liste des Matieres</h1>
-<button class="btn btn-outline-primary" (click)="displayNew()">Ajouter une matiere</button>
 
+
+<h1>Liste des Utilisateurs</h1>
+<button class="btn btn-outline-primary" (click)="displayNew()">Ajouter un utilisateur</button>
 <table class="table">
 
   <tr>
     <th>id</th>
-    <th>nom</th>
-    <th>couleur</th>
-    <th></th>
+    <th>Login</th>
+    <th>nom</th>    
+    <th>prenom</th>
+    <th>Adresse</th>
+    <th>Date de naissance</th>
+    <th>Etablissement</th>
     <th></th>
   </tr>
   <tr
-    matiere-row
-    [user]="m"
-    *ngFor="let m of matieres"
+  utilisateur-row
+    [user]="p"
+    *ngFor="let p of utilisateurs"
     (delete)="delete($event)"
   ></tr>
 </table>
