--- a/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
+++ b/etablissementAngular/src/app/admin/liste-classes/liste-classes.component.html
@@ -1,18 +1,16 @@
 
 <div>
-    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-outline-light">Liste des professeurs  </a>
-    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-outline-light">Liste des classes  </a>
-    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-outline-light">Liste des matières  </a>
-    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-outline-light">Liste des salles  </a>
+    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
+    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
+    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
+    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
 
 </div>
 
-<h1>liste des Classes</h1>
-<button class="btn btn-link" (click)="displayNew()">ajouter Salle de Classe</button>
+<h1>Liste des Classes</h1>
+<button class="btn btn-outline-primary" (click)="displayNew()">Ajouter une classe</button>
 
 <table class="table">
-
-<tr *ngIf="showNew" groupe-classe-row (insert)="insert()" (cancel)="cancel()"></tr>
   <tr>
     <th>id</th>
     <th>nom</th>    
