--- a/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
+++ b/etablissementAngular/src/app/admin/liste-professeurs/liste-professeurs.component.html
@@ -1,29 +1,25 @@
 
 <div>
-    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-outline-light">Liste des professeurs  </a>
-    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-outline-light">Liste des classes  </a>
-    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-outline-light">Liste des matières  </a>
-    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-outline-light">Liste des salles  </a>
+    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
+    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
+    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
+    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
 </div>
 
 
 
-<h1>liste des Professeurs</h1>
-<button class="btn btn-link" (click)="displayNew()">ajouter Professeur</button>
+<h1>Liste des Professeurs</h1>
+<button class="btn btn-outline-primary" (click)="displayNew()">Ajouter un professeur</button>
 <table class="table">
 
-<tr *ngIf="showNew" professeur-row (insert)="insert()" (cancel)="cancel()"></tr>
   <tr>
     <th>id</th>
-    <th>Login.login</th>
-    <th>Login.password</th>
+    <th>Login</th>
     <th>nom</th>    
     <th>prenom</th>
-    <th>Adresse => numero de rue</th>
-    <th>Adresse => nom de rue</th>
-    <th>Adresse => ville</th>
-    <th>dateNaissance</th>
-    <th>etablissement.nom</th>
+    <th>Adresse</th>
+    <th>Date de naissance</th>
+    <th>Etablissement</th>
     <th></th>
   </tr>
   <tr
