modification de la salle

--- a/etablissementAngular/src/app/admin/liste-matieres/liste-matieres.component.html
+++ b/etablissementAngular/src/app/admin/liste-matieres/liste-matieres.component.html
@@ -1,6 +1,8 @@
 
 <div>
-    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
+    <a  [routerLink]="['/homeadmin']" routerLinkActive="active" class="btn btn-light">Home</a>
+    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs</a>
+    <a  [routerLink]="['/listeutilisateurs']" routerLinkActive="active" class="btn btn-light">Liste des utilisateurs</a>
     <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
     <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
     <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
