--- a/etablissementAngular/src/app/admin-row/salle-classe-row/salle-classe-row.component.html
+++ b/etablissementAngular/src/app/admin-row/salle-classe-row/salle-classe-row.component.html
@@ -1,14 +1,13 @@
 
 
 <ng-container>
-    <td>{{ user.id }}</td>
-    <td>{{ user.nom }}</td>
-    <td><div *ngFor="let item of user.matieresExclues;">{{item.nom}}</div></td>
-    <td>{{user.capacite}}</td>
+    <td>{{ salle.id }}</td>
+    <td>{{ salle.nom }}</td>
+    <td><div *ngFor="let matiere of salle.matieresExclues;">{{matiere.nom}}</div></td>
+    <td>{{salle.capacite}}</td>
     <td>
-      <button (click)="changeMode()" class="btn btn-outline-primary">
-        editer
-      </button>
+      <button [routerLink]="['/salle', 'edit', salle.id]"
+      routerLinkActive="active" class="btn btn-outline-warning">Modifier</button>
     </td>
     <td>
       <button class="btn btn-outline-danger" (click)="delete()">supprimer</button>
