--- a/etablissementAngular/src/app/admin/list-utilisateurs/list-utilisateurs.component.html
+++ b/etablissementAngular/src/app/admin/list-utilisateurs/list-utilisateurs.component.html
@@ -1,5 +1,6 @@
 
 <div>
+    <a  [routerLink]="['/homeadmin']" routerLinkActive="active" class="btn btn-light">Home</a>
     <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
     <a  [routerLink]="['/listeutilisateurs']" routerLinkActive="active" class="btn btn-light">Liste des utilisateurs  </a>
     <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
