--- a/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
+++ b/etablissementAngular/src/app/admin/liste-salles/liste-salles.component.html
@@ -1,9 +1,11 @@
 
 <div>
-    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs  </a>
-    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes  </a>
-    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières  </a>
-    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles  </a>
+    <a  [routerLink]="['/homeadmin']" routerLinkActive="active" class="btn btn-light">Home</a>
+    <a  [routerLink]="['/listeprofesseurs']" routerLinkActive="active" class="btn btn-light">Liste des professeurs</a>
+    <a  [routerLink]="['/listeutilisateurs']" routerLinkActive="active" class="btn btn-light">Liste des utilisateurs</a>
+    <a  [routerLink]="['/listeclasses']" routerLinkActive="active" class="btn btn-light">Liste des classes</a>
+    <a  [routerLink]="['/listematieres']" routerLinkActive="active" class="btn btn-light">Liste des matières</a>
+    <a  [routerLink]="['/listesalles']" routerLinkActive="active" class="btn btn-light">Liste des salles</a>
 </div>
 
 <h1>Liste des Salles de classe</h1>
@@ -21,7 +23,7 @@
   </tr>
   <tr
     salle-classe-row
-    [user]="s"
+    [salle]="s"
     *ngFor="let s of salles"
     (delete)="delete($event)"
   ></tr>
